--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -12,6 +12,8 @@ ol {
   max-width: 250px;
   border: 2px solid black;
   border-radius: 8px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ProfileImage {
